# logger

./: README.md
logger/: CMakeLists.txt  cross_platform_def.h  logger.c  logger.h  logger.i  pch.h  pch.i
logger/Debug/: logger.idb  logger.lib  logger.vcxproj.FileListAbsolute.txt
logger/Debug/logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  logger.lastbuildstate
logger/logger/: logger.h
logger/x64/Debug/logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  logger.lastbuildstate
logger/x64/Release/logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
tests/: CMakeLists.txt  test.cpp
tests/x64/Debug/: test.exe.recipe  test.ilk  vc143.idb
tests/x64/Debug/test.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/x64/Release/: test.exe.recipe  test.iobj  test.ipdb
tests/x64/Release/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
